--- a/index.html
+++ b/index.html
@@ -36,15 +36,20 @@
                 <hr>
                 <h2>Friends</h2>
                 <ul>
-                <li>Rishabh</li>
+                    <li><h3>Aditya Pandey</h3></li>
+                    <li><h3>Aman Patel</h3><li>
+                <li><h3>Aakash<h3></li>
+                <li><h3>Akshaya<h3></li>
+                    <li><h3>Bhavishya</h3><li>
+                <li>Nandini</li>
                 <li>Priya</li>
-                <li><a href="C:\Users\byas\Documents\happys_python\akshaya.mp4">Akshaya</a></li>
+                <li>Sanjana</li>
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
                 <h1>Places Visited</h1>
                 <table cellspacing="100">
                     <tr>
-                        <td><h3><a href="https://en.wikipedia.org/wiki/Gorakhpur">Gorakhpur</a></h3></td>
+                        <td><h3><a href="https://www.google.com/search?rlz=1C1UEAD_enIN975IN975&sxsrf=ALiCzsas4Lna1TWPBFehtkcr-wawxtLEpQ:1660736868761&source=univ&tbm=isch&q=nauka+vihar+gorakhpur&fir=hRtcFWUxw0N-fM%252COXDuk5fmhHnFfM%252C_%253BYZgpIjjTVJUl_M%252CTOW3f0smwmJz3M%252C_%253BfK0ws_XWTqf2bM%252CUzh23z20Ijo7aM%252C_%253Bgbf-zP-JE-OSEM%252CHJol9TX_WaJUMM%252C_%253BDKA7P9Ss-XEbQM%252ClxOFmZ28KpukrM%252C_%253BTeqhVx6zd6aEqM%252CKmgOWBeRolSQ9M%252C_%253BnM7nKTLttcj9wM%252C3U9SVoF1JxcoeM%252C_%253B92NSiJasVBBmVM%252COXiDQmsZGJXItM%252C_%253Bs4uDpqLmbMr_AM%252COXDuk5fmhHnFfM%252C_%253BOkuoZ5yTxdHKbM%252CTOW3f0smwmJz3M%252C_&usg=AI4_-kSa2z0tMhPg9wWaARSLxLK783-e-g&sa=X&ved=2ahUKEwjq1IL55s35AhW6TWwGHTV1DoIQ7Al6BAgDECo&biw=1280&bih=616&dpr=1.5#imgrc=s4uDpqLmbMr_AM">Gorakhpur</a></h3></td>
                         <td><h3>⭐⭐⭐⭐⭐</h3></td>
                         <td><h3><a href="https://www.tripadvisor.in/Attractions-g608475-Activities-Kota_Kota_District_Rajasthan.html">Kota</a></h3></td>
                         <td><h4>⭐⭐⭐⭐⭐</h4></td>
