--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <img src="happy.jpeg" alt="Happys profile picture">
                 <h1>WELCOME TO <em>BYAS'S</em> OFFICIAL WEBSITE</h1>
                     <p>Started learning <strong>web</strong> development</p>
-                <p>i am from different place and trying to learn the local language,
-                    people at this place are awesome 
-                </p>
+                <p>This is my demo page and hope i will do better </p>
                 <hr>
                 <h3>MY HOBBIES</h3>
                 <ul>
@@ -38,12 +36,20 @@
                 <ul>
                     <li><h3>Aditya Pandey</h3></li>
                     <li><h3>Aman Patel</h3><li>
-                <li><h3>Aakash<h3></li>
-                <li><h3>Akshaya<h3></li>
+                    <li><h3>Vipin</h3><li>
+                    <li><h3>Amit</h3></li>
+                    <li><h3>Aakash<h3></li>
+                    <li><h3>Akshaya<h3></li>
                     <li><h3>Bhavishya</h3><li>
-                <li>Nandini</li>
-                <li>Priya</li>
-                <li>Sanjana</li>
+                    <li><h3>Bhardwaj</h3></li>
+                    <li><h3>Karthik</h3><li>
+                    <li><h3>Koushik</h3></li>
+                    <li><h3>Nandini</h3></li>
+                    <li><h3>Niharika</h3></li>
+                    <li><h3>Priya</h3</li>
+                    <li><h3>Rishabh</h3></li>
+                    <li><h3>Sanjana</h3></li>
+                    <li><h3>Sravya</h3></li>
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
                 <h1>Places Visited</h1>
