--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <h2>Friends</h2>
                 <ul>
                     <li><h3>Aditya Pandey</h3></li>
-                    <li><h3>Aman Patel</h3><li>
-                    <li><h3>Vipin</h3><li>
+                    <li><h3>Aman Patel</h3></li>
+                    <li><h3>Vipin</h3></li>
                     <li><h3>Amit</h3></li>
-                    <li><h3>Aakash<h3></li>
-                    <li><h3>Akshaya<h3></li>
-                    <li><h3>Bhavishya</h3><li>
+                    <li><h3>Aakash</h3></li>
+                    <li><h3>Akshaya</h3></li>
+                    <li><h3>Bhavishya</h3></li>
                     <li><h3>Bhardwaj</h3></li>
-                    <li><h3>Karthik</h3><li>
+                    <li><h3>Karthik</h3></li>
                     <li><h3>Koushik</h3></li>
                     <li><h3>Nandini</h3></li>
                     <li><h3>Niharika</h3></li>
@@ -71,7 +71,7 @@
                         <td><h4>⭐⭐⭐</h4></td>
                     </tr>
                     <tr>
-                        <td><h3><a href="C:\Users\byas\Desktop\visit.mp4">Guntur</a></h3></td>
+                        <td><h3><a href="https://www.google.com/search?gs_ssp=eJzj4tVP1zc0TC8qy7asrEg3YPRiKy7KVUgsAABXCgdO&q=srm+ap&rlz=1C1UEAD_enIN975IN975&oq=srm&aqs=chrome.2.69i57j46i131i433i512l2j0i131i433i512l4j0i512j46i131i175i199i433j0i131i433i512.3570j0j15&sourceid=chrome&ie=UTF-8">SRM AP</a></h3></td>
                         <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                 </table>
