--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <hr>
                 <h2>Friends</h2>
                 <ul>
-                    <li><h3>Aditya Pandey</h3></li>
+                    <li><h3><a href="aditya.jpg">Aditya Pandey</a></h3></li>
                     <li><h3>Aman Patel</h3></li>
                     <li><h3>Vipin</h3></li>
                     <li><h3>Amit</h3></li>
