--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYAS'S PERSONAL</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
      <center>
         <!-- <hr size="100" color="darkorange">
             <h1> I LOVE MY INDIA</h1>
