--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li><h3><a href="rishabh.png">Rishabh</a></h3></li>
                     <li><h3>Sanjana</h3></li>
                     <li><h3>Sravya</h3></li>
+                     <li><h3>Sailesh</h3></li>
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
                 <h1>Places Visited</h1>
