--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYAS'S PERSONAL</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color:powderblue;">
      <center>
@@ -46,7 +46,7 @@
                     <li><h3>Bhardwaj</h3></li>
                     <li><h3><a href="karthik.png">Karthik</a></h3></li>
                     <li><h3>Koushik</h3></li>
-                    <li><h3>Nandini</h3></li>
+                    <li><h3><a href="nandini.jpeg">Nandini</a></h3></li>
                     <li><h3>Niharika</h3></li>
                     <li><h3>Priya</h3</li>
                     <li><h3><a href="rishabh.png">Rishabh</a></h3></li>
