--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <h2>Friends</h2>
                 <ul>
                     <li><h3><a href="aditya.jpg">Aditya Pandey</a></h3></li>
+                    <li><h3><a href="punit.jpg">Punit Yadav</a></h3></li>
                     <li><h3><a href="aman.png">Aman Patel</a></h3></li>
                     <li><h3><a href="vipin.png">Vipin</a></h3></li>
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
