--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li><h3><a href="aman.png">Aman Patel</a></h3></li>
                     <li><h3><a href="vipin.png">Vipin</a></h3></li>
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
-                    <li><h3>Aakash</h3></li>
+                    <li><h3><em>Aakash</em></h3></li>
                     <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
                     <li><h3>Bhavishya</h3></li>
                     <li><h3>Bhardwaj</h3></li>
