--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="bya.jpeg" alt="Happys profile picture">
                 <h1>WELCOME TO <em>BYAS'S</em> OFFICIAL WEBSITE</h1>
                     <p>Started learning <strong>web</strong> development</p>
-                <p>This is my demo page and hope i will do better </p>
+                    <p><em>This is my demo page and hope i will do better</em></p>
                 <hr>
                 <h3>MY HOBBIES</h3>
                 <ul>
@@ -43,17 +43,17 @@
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
                     <li><h3><em>Aakash</em></h3></li>
                     <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
-                    <li><h3>Bhavishya</h3></li>
-                    <li><h3>Bhardwaj</h3></li>
+                    <li><h3><em>Bhavishya</em></h3></li>
+                    <li><h3><em>Bhardwaj</em></h3></li>
                     <li><h3><a href="karthik.png">Karthik</a></h3></li>
-                    <li><h3>Koushik</h3></li>
+                    <li><h3><em>Koushik</em></h3></li>
                     <li><h3><a href="nandini.jpeg">Nandini</a></h3></li>
-                    <li><h3>Niharika</h3></li>
-                    <li><h3>Priya</h3</li>
+                    <li><h3><em>Niharika</em></h3></li>
+                    <li><h3><em>Priya</em></h3</li>
                     <li><h3><a href="rishabh.png">Rishabh</a></h3></li>
-                    <li><h3>Sanjana</h3></li>
-                    <li><h3>Sravya</h3></li>
-                     <li><h3>Sailesh</h3></li>
+                    <li><h3><em>Sanjana</em></h3></li>
+                    <li><h3><em>Sravya</em></h3></li>
+                    <li><h3><em>Sailesh</em></h3></li>
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
                 <h1>Places Visited</h1>
