--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li><h3><a href="punit.jpg">Punit Yadav</a></h3></li>
                     <li><h3><a href="aman.png">Aman Patel</a></h3></li>
                     <li><h3><a href="vipin.png">Vipin</a></h3></li>
+                    <li><h3><em>Shivam</em></h3></li>
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
                     <li><h3><em>Aakash</em></h3></li>
                     <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
