--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li><h3><em>Sailesh</em></h3></li>
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
-                <h1>Places Visited</h1>
+                <h1>PLACES VISITED </h1>
                 <table cellspacing="100">
                     <tr>
                         <td><h3><a href="https://www.google.com/search?rlz=1C1UEAD_enIN975IN975&sxsrf=ALiCzsas4Lna1TWPBFehtkcr-wawxtLEpQ:1660736868761&source=univ&tbm=isch&q=nauka+vihar+gorakhpur&fir=hRtcFWUxw0N-fM%252COXDuk5fmhHnFfM%252C_%253BYZgpIjjTVJUl_M%252CTOW3f0smwmJz3M%252C_%253BfK0ws_XWTqf2bM%252CUzh23z20Ijo7aM%252C_%253Bgbf-zP-JE-OSEM%252CHJol9TX_WaJUMM%252C_%253BDKA7P9Ss-XEbQM%252ClxOFmZ28KpukrM%252C_%253BTeqhVx6zd6aEqM%252CKmgOWBeRolSQ9M%252C_%253BnM7nKTLttcj9wM%252C3U9SVoF1JxcoeM%252C_%253B92NSiJasVBBmVM%252COXiDQmsZGJXItM%252C_%253Bs4uDpqLmbMr_AM%252COXDuk5fmhHnFfM%252C_%253BOkuoZ5yTxdHKbM%252CTOW3f0smwmJz3M%252C_&usg=AI4_-kSa2z0tMhPg9wWaARSLxLK783-e-g&sa=X&ved=2ahUKEwjq1IL55s35AhW6TWwGHTV1DoIQ7Al6BAgDECo&biw=1280&bih=616&dpr=1.5#imgrc=s4uDpqLmbMr_AM">Gorakhpur</a></h3></td>
