--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h1>WELCOME TO <em>BYAS'S</em> OFFICIAL WEBSITE</h1>
                     <p>Started learning <strong>web</strong> development</p>
                     <p><em>This is my demo page and hope i will do better</em></p>
+                <div class="bottom">
+                  <img src="smoke.png" alt="smoke">
+                </div>
                 <hr>
                 <h3>MY HOBBIES</h3>
                 <ul>
@@ -43,6 +46,9 @@
                     <li><h3><em>Shivam</em></h3></li>
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
                     <li><h3><em>Aakash</em></h3></li>
+                    <div class="last">
+                      <img src="smoke.png" alt="smoke">
+                    </div>
                     <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
                     <li><h3><em>Bhavishya</em></h3></li>
                     <li><h3><em>Bhardwaj</em></h3></li>
