--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <title>CONTACT</title>
 </head>
 <body>
+    <div class="boi">
+        <img src="smoke.png">
+    </div>
     <h3>instagram- mr_happy_sh</h3>
     <h3>facebook- happy yadav</h3>
     <h3>snapchat- happy_yadav239</h3>
