--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                     <li><h3><a href="vipin.png">Vipin</a></h3></li>
                     <li><h3><em>Shivam</em></h3></li>
                     <li><h3><a href="amit.jpeg">Amit</a></h3></li>
-                    <li><h3><em>Aakash</em></h3></li>
+                    <li><h3><em>Harsh</em></h3></li>
+                    <li><h3><em>Gopal</em></h3></li>
+<!--                     <li><h3><em>Aakash</em></h3></li> -->
                     <div class="last">
                       <img src="smoke.png" alt="smoke">
                     </div>
-                    <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
+<!--                     <li><h3><a href="akshaya.jpg">Akshaya</a></h3></li>
                     <li><h3><em>Bhavishya</em></h3></li>
                     <li><h3><em>Bhardwaj</em></h3></li>
                     <li><h3><a href="karthik.png">Karthik</a></h3></li>
@@ -60,7 +62,7 @@
                     <li><h3><a href="rishabh.png">Rishabh</a></h3></li>
                     <li><h3><em>Sanjana</em></h3></li>
                     <li><h3><em>Sravya</em></h3></li>
-                    <li><h3><em>Sailesh</em></h3></li>
+                    <li><h3><em>Sailesh</em></h3></li> -->
                 </ul>
                 <h3><a href="contact.html">Contact me</a></h3>
                 <h1>PLACES VISITED </h1>
